src/main/kotlin/com/example/kopring/global/exception/error/ErrorResponse.kt
package com.example.kopring.global.exception.error

interface ErrorResponse {
    val status: Int
    val message: String
}